Added a method that are first and last elements of array equal to 10